# safety-net-matth2k

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: connections.rs  lut.rs  variants.rs
inst_derive/: Cargo.toml
inst_derive/src/: lib.rs
src/: attribute.rs  circuit.rs  error.rs  graph.rs  lib.rs  logic.rs  netlist.rs  util.rs
tests/: analysis.rs  api.rs  daniel_tests.rs  edits.rs  flipflop.rs  identifiers.rs  matches.rs  params.rs  verilog.rs
